*Empty MediaWiki Message*

--- a/Въторьникъ.mw
+++ b/Въторьникъ.mw
@@ -1,5 +1,5 @@
-'''Въторьникъ''' въторыи дьнь [[Седмица|седмицѧ]] ѥстъ.
-{{Седмица}}
+'''Въторьникъ''' въторыи дьнь [[Сєдми́ца|седмицѧ]] ѥстъ.
+{{Сєдми́ца}}
 
 [[af:Dinsdag]]
 [[als:Dienstag]]
