*Empty MediaWiki Message*

--- a/Сѫбота.mw
+++ b/Сѫбота.mw
@@ -1,6 +1,5 @@
-'''Сѫбота''' (из [[Грьчьскъ ѩзыкъ|грьчьска]] ѩзыка σάμβατον < σάββατον) [[Седмица|седмицѧ]] шестыи дьнь ѥстъ.
-{{Седмица}}
-[[Катигорї:Седмица]]
+'''Сѫбота''' (иꙁ [[Грьчьскъ ѩзыкъ|грьчьска]] ѩꙁꙑ́ка σάμβατον < σάββατον) [[Сєдми́ца|сєдми́цѧ]] шєстꙑи дьнь ѥстъ.
+{{Сєдми́ца}}
 
 [[af:Saterdag]]
 [[als:Samstag]]
