*Empty MediaWiki Message*

--- a/Нєдѣлꙗ.mw
+++ b/Нєдѣлꙗ.mw
@@ -1,7 +1,7 @@
 '''Нєдѣ́лꙗ''' [[Сєдми́ца|сєдми́цѧ]] дь́нь ѥ́стъ ⁙ Нєдѣ́лꙗ сѧ мє́ждоу сѫбо́тоѭ и понєдѣл҄ьникомь находитъ ⁙ Мъногъ странъ сєдмꙑи [[Сєдми́ца|сєдми́цѧ]] дь́нь ѥ́стъ · нъ инꙑ стра́нꙑ и дрьжа́вꙑ · [[АѤ҃Д]] наприкла́дъ · нєдѣ́лѭ прьвꙑимь сєдми́цѧ дьнє́м наꙁꙑваѫтъ
 
 == ꙁьри́ та́кождє ==
-{{Седмица}}
+{{Сєдми́ца}}
 {{commonscat|Sunday}}
 
 [[af:Sondag]]
