*Empty MediaWiki Message*

--- a/Чєтврьтъкъ.mw
+++ b/Чєтврьтъкъ.mw
@@ -1,6 +1,5 @@
-'''Четврьтъкъ''' четврьтъ дьнь [[Седмица|седмицѧ]] ѥстъ.
-{{Седмица}}
-[[Катигорї:Седмица]]
+'''Чєтврь́тъкъ''' чєтврьтъ дьнь [[Сєдми́ца|сєдми́цѧ]] ѥстъ.
+{{Сєдми́ца}}
 
 [[af:Donderdag]]
 [[als:Donnerstag]]
