*Empty MediaWiki Message*

--- a/Срѣда.mw
+++ b/Срѣда.mw
@@ -1,5 +1,5 @@
-'''Срѣда''' третии дьнь [[Седмица|седмицѧ]] ѥстъ.
-{{Седмица}}
+'''Срѣ́да''' третии дьнь [[Сєдми́ца|Сєдми́цѧ]] ѥстъ.
+{{Сєдми́ца}}
 
 [[af:Woensdag]]
 [[als:Mittwoch]]
