*Empty MediaWiki Message*

--- a/Срѣда.mw
+++ b/Срѣда.mw
@@ -1,4 +1,4 @@
-'''Срѣ́да''' третии дьнь [[Сєдми́ца|Сєдми́цѧ]] ѥстъ.
+'''Срѣ́да''' трєтии дьнь [[Сєдми́ца|Сєдми́цѧ]] ѥстъ.
 {{Сєдми́ца}}
 
 [[af:Woensdag]]
