*Empty MediaWiki Message*

--- a/Пѧтъкъ.mw
+++ b/Пѧтъкъ.mw
@@ -1,6 +1,5 @@
-'''Пѧтъкъ''' ([[Грьчьскъ ѩзыкъ|грьчьскы]] '''параскеѵа́''', такоже рекомоѥ) [[Седмица|седмицѧ]] пѧтыи дьнь ѥстъ.
-{{Седмица}}
-[[Катигорї:Седмица]]
+'''Пѧ́тъкъ''' ([[Грьчьскъ ѩзыкъ|грьчьскꙑ]] '''параскєѵа́''', такожє рєкомоѥ) [[Сєдми́ца|Сєдми́цѧ]] пѧтꙑи дьнь ѥстъ.
+{{Сєдми́ца}}
 
 [[af:Vrydag]]
 [[als:Freitag]]
