*Empty MediaWiki Message*

--- a/Понєдѣл҄ьникъ.mw
+++ b/Понєдѣл҄ьникъ.mw
@@ -1,6 +1,5 @@
-'''Понедѣл҄ьникъ''' прьвыи дьнь [[Седмица|седмицѧ]] ѥстъ.
-{{Седмица}}
-[[Катигорї:Седмица]]
+'''Понєдѣ́л҄ьникъ''' прьвꙑи дьнь [[Сєдми́ца|Сєдми́цѧ]] ѥстъ.
+{{Сєдми́ца}}
 
 [[af:Maandag]]
 [[als:Montag]]
