*Empty MediaWiki Message*

--- a/Въторьникъ.mw
+++ b/Въторьникъ.mw
@@ -1,4 +1,4 @@
-'''Въторьникъ''' въторыи дьнь [[Сєдми́ца|седмицѧ]] ѥстъ.
+'''Въто́рьникъ''' въторꙑи дьнь [[Сєдми́ца|сєдмицѧ]] ѥстъ.
 {{Сєдми́ца}}
 
 [[af:Dinsdag]]
