--- a/Сєдмица.mw
+++ b/Сєдмица.mw
@@ -9,10 +9,9 @@
 # [[сѫбота]], [[собота]]
 # [[нєдѣ́лꙗ]]
 
-{{Седмица}}
+{{Сєдми́ца}}
 [[Category:Сєдми́ца]]
 {{Link FA|ia}}
-
 {{Link FA|el}}
 
 [[af:Week]]
