--- a/Сєдмица.mw
+++ b/Сєдмица.mw
@@ -1,13 +1,13 @@
 '''Сєдми́ца''' - ѥдиница иꙁъмѣрєниꙗ врѣмєни ѥсть. Сєдмь дьньи съдръжитъ ѥсть.
 
 == Дьньи имєна ==
-# [[понедѣл҄ьникъ]]
-# [[въторьникъ]]
-# [[срѣда]]
-# [[четврьтъкъ]]
-# [[пѧтъкъ]], [[параскевь]], [[параскевьги]]
-# [[сѫбота]], [[собота]]
-# [[нєдѣ́лꙗ]]
+# [[Понєдѣ́л҄ьникъ]]
+# [[Въто́рьникъ]]
+# [[Срѣ́да]]
+# [[Чєтврь́тъкъ]]
+# [[Пѧ́тъкъ]], [[параскевь]], [[параскевьги]]
+# [[Сѫбо́та]], [[собота]]
+# [[Нєдѣ́лꙗ]]
 
 {{Сєдми́ца}}
 [[Category:Сєдми́ца]]
