*Empty MediaWiki Message*

--- a/Спєктроумъ.mw
+++ b/Спєктроумъ.mw
@@ -1,11 +1,11 @@
-[[Видъ:ZXSpectrum48k.jpg|thumb|Спектрѹмъ|left]]
-'''Спектрѹмъ''' ({{lang-en|ZX Spectrum}}) [[Велика Британї|англїискы]] [[съмѣтател҄ь]] ѥстъ. Сътворѥнъ лѣта 1982 ѥстъ. Ричардъ Алтвассеръ ({{lang-en|Richard Altwasser}}) сътворихъ схимѫ, а Стивенъ Викерсъ ({{lang-en|Steven Vickers}}) [[программа|программѫ]] [[ROM]] напьсахъ. Фирма Sinclair Research Ltd Спектрѹмы дѣлааше.
+[[Дѣ́ло:ZXSpectrum48k.jpg|thumb|Спє́ктроумъ|left]]
+'''Спє́ктроумъ''' и {{lang-en|ZX Spectrum}} · [[Велика Британїꙗ|англїискъ]] [[съмѣтатєл҄ь]] ѥ́стъ ⁙ Сътворѥнъ лѣта 1982 ѥ́стъ ⁙ Ричардъ Алтвассєръ и {{lang-en|Richard Altwasser}} · сътворихъ схимѫ · а Стивєнъ Викєрсъ и {{lang-en|Steven Vickers}} · [[программа|программѫ]] [[ROM]] напьсахъ ⁙ Фирма Sinclair Research Ltd Спєктроумꙑ дѣлаашє
 
-Спектрѹма мънози съвѣтьсти образи сѫтъ: Пентагонъ, Скорпионъ, Профи, АТМ Тѹрбо ид҃р.
+Спєктроума мъноꙁи съвѣтьсти обраꙁи сѫтъ : Пєнтагонъ · Скорпионъ · Профи, АТМ Тоурбо ид҃р
 
-== [[Интернетъ|Интернетѣ]] ==
+== [[Мєждоусѣ́тиѥ|Мєждоусѣтии]] ==
 {{commonscat|Sinclair ZX Spectrum}}
-*[http://worldofspectrum.org World of Spectrum]
+* [http://worldofspectrum.org World of Spectrum]
 
 [[Category: Ищислител҄ьна технїка]]
 
