*Empty MediaWiki Message*

--- a/Придънѣстриѥ.mw
+++ b/Придънѣстриѥ.mw
@@ -1,19 +1,20 @@
 {{Дрьжава
-| name = Придънѣстриѥ
+| name = Придънѣ́стрьска Молдо́вьска Димократі́ꙗ<br/><small>{{lat-ga|Приднестровская Молдавская Республика<br/>Република Молдовеняскэ Нистрянэ<br/>Придністровська Молдавська Республіка}}</small>
 | знамѧ= [[Видъ:Flag_of_Moldavian_SSR.svg‎ |150px]]
 | знакъ = [[Видъ:Transnistria-coa.png|80px]]
 | map = TransnistrieLocatie.png
 | Стольнъ градъ = [[Тирасполь]]
-| Ѩзыкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]], [[молдо́вьскъ ѩꙁꙑ́къ|молдо́вьскъ]], [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]]
+| Ѩзыкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]] · [[молдо́вьскъ ѩꙁꙑ́къ|молдо́вьскъ]] · [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]]
 | Глава = [[Игорь Смирновъ]]
 | Пространиѥ = 4 163 к҃м²
-| Людии = 533 500 лєѡ́дръ
-| Гроши = Придънѣ́стрїискъ роубль
+| Людии = 533 500
 }}
 
-'''Придънѣ́стриѥ''', ({{lang-ru|Приднестро́вская Молда́вская Респу́блика, ПМР}}) въсточьнꙑѩ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] нєпри́ꙁнана дрьжа́ва въ [[Молдо́ва|Молдо́вѣ]] ѥ́стъ · Cто́льнъ гра́дъ [[Тира́споль]] ѥ́стъ · Дрьжавьна ѩꙁꙑ́ка Придънѣ́стриѩ [[молдо́вьскъ ѩꙁꙑ́къ|молдо́вьскъ]], [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[роу́сьскъ ѩꙁꙑ́къ]] ѥстє.
+'''Придънѣ́стриѥ''' и {{lang-ru|Приднестровье}} · єписі́мьно имѧ '''Придънѣ́стрьска Молдо́вьска Димократі́ꙗ''' и {{lang-ru|Приднестро́вская Молда́вская Респу́блика}} · {{lang-mo|Република Молдовеняскэ Нистрянэ}} · {{lang-uk|Република Молдовеняскэ Нистрянэ}} · въсточьнꙑѩ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] нєпри́ꙁнана дрьжа́ва [[Молдо́ва|Молдо́вѣ]] ѥ́стъ · Cто́льнъ гра́дъ [[Тира́споль]] ѥ́стъ ⁙ Дрьжавьна ѩꙁꙑци́ Придънѣ́стриꙗ [[молдо́вьскъ ѩꙁꙑ́къ|молдо́вьскъ]] · [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[роу́сьскъ ѩꙁꙑ́къ]] сѫтъ
 
-[[Катигорі́ꙗ:Дрьжа́вꙑ]]
+== їсторі́ꙗ ==
+Приднѣ́стриѥ авило своѭ самостоꙗтєл҄ь 1990 лѣта ѥ́стъ · нъ нꙑнѣ дрьжавꙑ [[ѤН҄С]] ѥѩ нє приꙁнаѭтъ сѫ́тъ ижє ꙗко Молдо́вꙑ чѧ́сть мьнѧтъ ⁙ Молдо́ва жє надъ Приднѣ́стриꙗ ꙁємлєѭ власти нє и́мѣтъ ѥ́стъ
+[[Катигорі́ꙗ:Нєпри́ꙁнанꙑ дрьжа́вꙑ]][[Category:Молдо́ва]]
 
 [[ar:ترانسنيستريا]]
 [[ast:Transnistria]]
