/* ꙁьри́ та́кождє */

--- a/Молдова.mw
+++ b/Молдова.mw
@@ -24,7 +24,7 @@
 == ꙁьри́ та́кождє ==
 {{commonscat|Moldova}}
 * [[Придънѣ́стриѥ]]
-[[Category:Дрьжа́вꙑ|*]]
+[[Category:Молдо́ва|*]]
 
 [[af:Moldowa]]
 [[als:Moldawien]]
