*Empty MediaWiki Message*

--- a/Придънѣстриѥ.mw
+++ b/Придънѣстриѥ.mw
@@ -10,7 +10,7 @@
 | Людии = 533 500
 }}
 
-'''Придънѣ́стриѥ''' и {{lang-ru|Приднестровье}} · єписі́мьно имѧ '''Придънѣ́стрьска Молдо́вьска Димократі́ꙗ''' и {{lang-ru|Приднестро́вская Молда́вская Респу́блика}} · {{lang-mo|Република Молдовеняскэ Нистрянэ}} · {{lang-uk|Република Молдовеняскэ Нистрянэ}} · въсточьнꙑѩ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] нєпри́ꙁнана дрьжа́ва [[Молдо́ва|Молдо́вѣ]] ѥ́стъ · Cто́льнъ гра́дъ [[Тира́споль]] ѥ́стъ ⁙ Дрьжавьна ѩꙁꙑци́ Придънѣ́стриꙗ [[молдо́вьскъ ѩꙁꙑ́къ|молдо́вьскъ]] · [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[роу́сьскъ ѩꙁꙑ́къ]] сѫтъ
+'''Придънѣ́стриѥ''' и {{lang-ru|Приднестровье}} · єписі́мьно имѧ '''Придънѣ́стрьска Молдо́вьска Димократі́ꙗ''' и {{lang-ru|Приднестро́вская Молда́вская Респу́блика}} · {{lang-mo|Република Молдовеняскэ Нистрянэ}} · {{lang-uk|Придністровська Молдавська Республіка}} · въсточьнꙑѩ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] нєпри́ꙁнана дрьжа́ва [[Молдо́ва|Молдо́вѣ]] ѥ́стъ · Cто́льнъ гра́дъ [[Тира́споль]] ѥ́стъ ⁙ Дрьжавьна ѩꙁꙑци́ Придънѣ́стриꙗ [[молдо́вьскъ ѩꙁꙑ́къ|молдо́вьскъ]] · [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[роу́сьскъ ѩꙁꙑ́къ]] сѫтъ
 
 == їсторі́ꙗ ==
 Приднѣ́стриѥ авило своѭ самостоꙗтєл҄ь 1990 лѣта ѥ́стъ · нъ нꙑнѣ дрьжавꙑ [[ѤН҄С]] ѥѩ нє приꙁнаѭтъ сѫ́тъ ижє ꙗко Молдо́вꙑ чѧ́сть мьнѧтъ ⁙ Молдо́ва жє надъ Приднѣ́стриꙗ ꙁємлєѭ власти нє и́мѣтъ ѥ́стъ
