*Empty MediaWiki Message*

--- a/Антоуанъ_Мєѥ.mw
+++ b/Антоуанъ_Мєѥ.mw
@@ -1,6 +1,6 @@
 '''Антоуа́н Мєѥ́''' и {{lang-fr|Paul-Jules-Antoine Meillet}} · [[Ноємврїи · 11 дьнь|Ноємврїꙗ 11]] · [[1866]] лѣта́ — [[Сєптємврїи · 21 дьнь|Сєптємврїꙗ 21]] [[1936]]) [[К҃-оѥ столѣтиѥ|К҃-аѥго столѣтиꙗ]] ѥдинъ о наивєличаишиихъ [[Франкїꙗ|франкїискъ]] [[ѩꙁꙑковѣдъ]] бѣашє 
 
-== бїограѳі́ꙗ ==
+== бїографі́ꙗ ==
 
 Мєѥ почьнє своѩ наоукꙑ [[Сорбонна|Сорбоннꙑ]] панєпїстимїии · идє ѥмоу довьлѣли  [[Мишєлъ Брєалъ]] · [[Фєрдинандъ дє Соссѷръ]] и [[Année Sociologique]] члѣни бѣашє ⁙ 1890 лѣ́та имє оучѧстиѥ ислѣдоватєл҄ьсцѣ ходѣ Каѵкасїискамъ горамъ · идє иꙁоучи [[армѣ́ньскъ ѩꙁꙑ́къ]] ⁙ Послѣди своѥго въꙁвращєниꙗ пакꙑ наоукꙑ съ Соссѷромь дѣлаашє
 
