*Empty MediaWiki Message*

--- a/Каꙁанъ.mw
+++ b/Каꙁанъ.mw
@@ -2,13 +2,13 @@
 | знамѧ= 
 | знакъ = Coat_of_Arms_of_Kazan_(Tatarstan)_(2004).png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсїꙗ
-| Глава = 
-| Людии = 1110 тысѫщь
+| Глава =
+| Людии = 1110 тꙑсѫщь
 | Основанъ = 1005
-| map = [[Видъ:Location Tatarstan Kazan.svg|200 px]]
+| map = [[Дѣ́ло:Location Tatarstan Kazan.svg|200 px]]
 |}}
-'''Каꙁанъ''' ({{Lang-ru|Казань}},  {{lang-tt|Казан (Qazan)}}) градъ [[Рѡсїꙗ|Рѡсїѩ]] ѥстъ, [[Татарстанъ|Татарстана]] [[стольнъ градъ]] ѥстъ. Каꙁанъ основанъ лѣта 1005 ѥстъ. Дьньсь Каꙁанѣ обитаѥтъ 1110 тысѫщь людии.
-== Зьри такожде ==
+'''Каꙁанъ''' ({{Lang-ru|Казань}}, {{lang-tt|Казан (Qazan)}}) градъ [[Рѡсїꙗ|Рѡсїѩ]] ѥстъ, [[Татарстанъ|Татарстана]] [[стольнъ градъ]] ѥстъ. Каꙁанъ основанъ лѣта 1005 ѥстъ. Дьньсь Каꙁанѣ обитаѥтъ 1110 тꙑсѫщь людии.
+== ꙁьри такождє ==
 {{commonscat|Kazan}}
 {{Рѡсїѩ наибол҄ьше гради}}
 [[Катигорї:Гради]]
