/* Рѡсїѩ наибол҄ьшє гради */

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -62,7 +62,7 @@
 * [[Омьскъ]]
 | width="20px" |
 | valign="top" |
-* [[Казанъ]]
+* [[Каꙁа́нъ]]
 * [[Челѣбиньскъ]]
 * [[Растовъ на Донѣ]]
 * [[Оуфа]]
