--- a/Татарьскъ_ѩꙁꙑкъ.mw
+++ b/Татарьскъ_ѩꙁꙑкъ.mw
@@ -1,11 +1,11 @@
-'''Татарьскъ ѩзыкъ''' (татырьскы: ''Татар теле'', ''Татарча'') [[Татаростанъ|Татаростанѹ]] Димократїѩ у [[Рѡсі́ꙗ|Рѡсі́и]] епїсимьнъ ѩзыкъ ѥстъ. Людии глаголѭщь: 5,3 леѡдръ.
+'''Тата́рьскъ ѩꙁꙑ́къ''' ({{lang-tt|''Татар теле'', ''Татарча''}}) [[Татаростанъ|Татаростаноу]] Димократїѩ у [[Рѡсі́ꙗ|Рѡсі́и]] єпїсимьнъ ѩꙁꙑкъ ѥстъ. Людии глаголѭщь: 5,3 лєѡдръ.
 
-==Татарьска азъбѹкы==
+==Татарьска аꙁъбоукꙑ==
 
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
-Аа Әә Бб Вв Гг Дд Ее (Ёё) Жж Җҗ Зз Ии Йй Кк Лл Мм Нн Ңң Оо Өө Пп Рр Сс Тт Уу Үү Фф Хх Һһ Цц Чч Шш Щщ Ьь Ыы Ъъ Ээ Юю Яя</div>
+Аа Әә Бб Вв Гг Дд єє (Ёё) Жж Җҗ ꙁꙁ Ии Йй Кк Лл Мм Нн Ңң Оо Өө Пп Рр Сс Тт Уу Үү Фф Хх Һһ Цц Чч Шш Щщ Ьь ꙑꙑ Ъъ Ээ Юю Яя</div>
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 * [[Башко́ртьскъ ѩꙁꙑ́къ]]
 
 {{InterWiki|tt|Башбит||татарьскыимь}}
