*Empty MediaWiki Message*

--- a/Подъгорица.mw
+++ b/Подъгорица.mw
@@ -2,12 +2,12 @@
 | знамѧ= Flag of Podgorica.svg
 | знакъ =
 | Дрьжава = {{Чрьныѩ Горы знамѧ}}Чрьна Гора
-| Глава = 
+| Глава =
 | Людии = 169132
-| Основанъ = 
-| Харта = [[Видъ:Podgorica-Position.PNG|200 px]]
+| Основанъ =
+| Харта = [[Дѣ́ло:Podgorica-Position.PNG|200 px]]
 |}}
-'''Подъгорица''' ({{Lang-sr|Подгорица/Podgorica}}) [[Чрьна Гора|Чрны Горы]] [[стольнъ градъ]] ѥсть. Построѥна рѣцѣ [[Морача|Морачи]] ѥсть. Людии обитаѥтъ 169 132. Сѥго града имени Рыбьница и Тїтоградъ бѣашете. Подъгорица стала ѥстъ пакы стольнъ градъ послѣди їѹнї 2006 годѣ, стольнъ градъ Чрьны Горы [[Цетиниѥ]] бѣаше.
+'''Подъгорица''' ({{Lang-sr|Подгорица/Podgorica}}) [[Чрьна Гора|Чрнꙑ Горꙑ]] [[стольнъ градъ]] ѥсть. Построѥна рѣцѣ [[Морача|Морачи]] ѥсть. Людии обитаѥтъ 169 132. Сѥго града имєни Рꙑбьница и Тїтоградъ бѣашєтє. Подъгорица стала ѥстъ пакꙑ стольнъ градъ послѣди їоунїꙗ 2006 годѣ, стольнъ градъ Чрьнꙑ Горꙑ [[Цетиниѥ]] бѣашє.
 
 {{Commonscat|Podgorica}}
 
