--- a/Цєтиниѥ.mw
+++ b/Цєтиниѥ.mw
@@ -7,16 +7,15 @@
 | Основанъ = 1482
 | Харта = [[Видъ:Cetinje-Position.PNG|200 px]]
 |}}
-'''Цетиниѥ''' ({{Lang-sr|Цетиње/Cetinje}}) [[Чрьна Гора|Чрьны Горы]] древльн҄ь [[стольнъ градъ]] ѥстъ. Людии обитаѥтъ 15 тысѧщь. Построѥнъ ѥстъ ѹ горы Ловщенъ ({{lang-sr|Ловћен}}) лѣта 1482.
+'''Цєти́ниѥ''' ({{Lang-sr|Цетиње/Cetinje}}) [[Чрьна Гора|Чрьны Горы]] древльн҄ь [[стольнъ градъ]] ѥстъ. Людии обитаѥтъ 15 тысѧщь. Построѥнъ ѥстъ ѹ горы Ловщенъ ({{lang-sr|Ловћен}}) лѣта 1482.
 
 <gallery>
 Image:AX_Cetinje_Zetski_Dom-20060818.jpg|Ѳеатро «Зетьскъ домъ»
 Image:Cipur_Church.jpg|Сипурьска съборьна црькы
 </gallery>
 {{Commonscat|Cetinje, Montenegro}}
-[[Катигорї:Чрьна Гора]]
-
-[[Катигорі́ꙗ:Стольни гради]]
+[[Category:Чрьна́ Гора́]]
+[[Category:Гра́ди]]
 
 [[bg:Цетине]]
 [[bs:Cetinje]]
