--- a/Каꙁанъ.mw
+++ b/Каꙁанъ.mw
@@ -11,8 +11,8 @@
 == ꙁьри такождє ==
 {{commonscat|Kazan}}
 {{Рѡсїѩ наибол҄ьше гради}}
-[[Катигорї:Гради]]
-[[Катигорї:Рѡсї]]
+[[Category:Гра́ди]]
+[[Category:Рѡсі́ꙗ]]
 
 [[af:Kazan]]
 [[ar:قازان]]
